<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/nav_devices"
            android:title="@string/devices"
            android:icon="@drawable/devices_icon"/>

        <item
            android:id="@+id/nav_history"
            android:title="@string/history"
            android:icon="@drawable/history_icon"/>

        <item
            android:id="@+id/nav_contacts"
            android:title="@string/contacts"
            android:icon="@drawable/contacts_icon"/>

    </group>

    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login_icon"/>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_baseline_account_circle_24"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_icon"/>

            </group>
        </menu>
    </item>

    <item android:title="Share">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share_icon"/>

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate"
                    android:icon="@drawable/rate_icon"/>

            </group>
        </menu>
    </item>

</menu>